<?xml version="1.0" encoding="utf-8"?>
<!-- Reset Password Screen -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:fillViewport="true"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayoutResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <!-- Image Application Logo -->

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/image_logo"
            android:src="@drawable/logo_image" />

        <!-- First TextView -->

        <TextView
            android:id="@+id/tv"
            android:layout_width="@dimen/editTextWidth"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etVerificationCode"
            android:layout_below="@+id/ivLogo"
            android:layout_marginTop="30dp"
            android:text="@string/txt_reset_pwd_desc"
            android:textColor="@color/whiteColor"
            android:textSize="14sp"
            android:textStyle="normal" />

        <!-- EditText Verification Code -->

        <EditText
            android:id="@+id/etVerificationCode"
            style="@style/edittext_style"
            android:layout_width="@dimen/editTextWidth"
            android:layout_height="@dimen/editTextHeightLogin"
            android:layout_below="@+id/tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/verification_code"
            android:drawablePadding="@dimen/drawblePaddingDimen"
            android:hint="@string/txt_verification_code"
            android:nextFocusLeft="@id/etVerificationCode"
            android:nextFocusUp="@id/etVerificationCode" />

        <!-- Second TextView -->

        <TextView
            android:id="@+id/tv1"
            android:layout_width="@dimen/editTextWidth"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etVerificationCode"
            android:layout_below="@+id/etVerificationCode"
            android:layout_marginTop="2dp"
            android:text="@string/txt_rpwd_sent_email"
            android:textColor="@color/whiteColor"
            android:textSize="14sp"
            android:textStyle="normal" />

        <!-- EditText Password -->

        <EditText
            android:id="@+id/etNewPassword"
            style="@style/edittext_style"
            android:layout_width="@dimen/editTextWidth"
            android:layout_height="@dimen/editTextHeightLogin"
            android:layout_below="@+id/tv1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/drawblePaddingDimen"
            android:hint="@string/txt_new_pwd"
            android:inputType="textPassword"
            android:nextFocusLeft="@id/etNewPassword"
            android:nextFocusUp="@id/etNewPassword" />

        <!-- View Line -->

        <View
            android:id="@+id/viewLine"
            android:layout_width="@dimen/editTextWidth"
            android:layout_height="1px"
            android:layout_below="@+id/etNewPassword"
            android:layout_centerHorizontal="true"
            android:background="@color/greyColor" />

        <!-- EditText Confim New Password -->

        <EditText
            android:id="@+id/etConfirmNewPassword"
            style="@style/edittext_style"
            android:layout_width="@dimen/editTextWidth"
            android:layout_height="@dimen/editTextHeightLogin"
            android:layout_below="@+id/viewLine"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/drawblePaddingDimen"
            android:hint="@string/txt_confirm_new_pwd"
            android:inputType="textPassword"
            android:nextFocusLeft="@id/etNewPassword"
            android:nextFocusUp="@id/etNewPassword" />

        <!-- Button Reset Password -->

        <Button
            android:id="@+id/btnResetPassword"
            style="@style/button_style"
            android:layout_width="@dimen/editTextWidth"
            android:layout_height="50dp"
            android:layout_below="@+id/etConfirmNewPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp"
            android:text="@string/btn_reset_password" />
    </RelativeLayout>

</ScrollView>