<?xml version="1.0" encoding="utf-8"?>
<!-- Forgot Password Screen -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_login"
    android:fillViewport="true"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayoutForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <!-- Image Application Logo -->

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/image_logo"
            android:src="@drawable/logo_image" />

        <!-- EditText Email -->

        <EditText
            android:id="@+id/etEmail"
            style="@style/edittext_style"
            android:layout_width="@dimen/editTextWidth"
            android:layout_height="@dimen/editTextHeightLogin"
            android:layout_below="@+id/ivLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/editTextHeightLogin"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="@dimen/drawblePaddingDimen"
            android:hint="@string/txt_email"
            android:nextFocusLeft="@id/etEmail"
            android:nextFocusUp="@id/etEmail" />

        <!-- Button Send -->

        <Button
            android:id="@+id/btnSend"
            style="@style/button_style"
            android:layout_width="@dimen/editTextWidth"
            android:layout_height="50dp"
            android:layout_below="@+id/etEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp"
            android:text="@string/btn_send" />

        <!-- Button Create Account -->

        <Button
            android:id="@+id/btnCreateAccount"
            style="@style/button_style"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/tvForgotPwd"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/btn_create_account"
            android:visibility="gone" />
    </RelativeLayout>

</ScrollView>