<?xml version="1.0" encoding="utf-8"?>
<!-- Media Picker Screen Layout -->
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mediapicker_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/mediapicker_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </ListView>

        <TextView
            android:id="@+id/mediapicker_no_galleries"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dim_20_media"
            android:text="@string/mediapicker_no_galleries"
            android:textSize="@dimen/dim_20_media"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearLayoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/mediapicker_button_select"
                style="@style/button_style_gradient"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:text="@string/mediapicker_button_done"
                android:visibility="visible" />

            <Button
                android:id="@+id/mediapicker_button_cancel"
                style="@style/button_style_gradient"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:text="@string/mediapicker_button_cancel"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <GridView
            android:id="@+id/mediapicker_grid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:columnWidth="@dimen/dim_80_media"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth" >
        </GridView>
    </LinearLayout>

</ViewFlipper>